# InternApp

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  application_manager.py  config.py  constants.py  cv_parser.py  database.py  jobs.json  main.py  maintenance_service.py  models.py  profile_manager.py  pyproject.toml  requirements.txt  scoring_engine.py  scraper_maintenance.md  storage_manager.py  tagging_service.py  user_profile.json
backend/repositories/: application_repository.py  job_repository.py  profile_repository.py
backend/scrapers/: airbus.py  ariane.py  cnes.py  safran.py  thales.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: ApplicationCard.module.css  ApplicationCard.tsx  ApplicationDashboard.module.css  ApplicationDashboard.tsx  CVUploader.module.css  CVUploader.tsx  FeedToggle.module.css  FeedToggle.tsx  JobCard.tsx  JobsTable.module.css  JobsTable.tsx  NotificationContainer.module.css  NotificationContainer.tsx  ProfileManager.module.css  ProfileManager.tsx  ScraperWarningToggle.tsx  SourceToggle.module.css  SourceToggle.tsx  TrackButton.module.css  TrackButton.tsx  index.ts
frontend/src/contexts/: NotificationContext.tsx
frontend/src/hooks/: index.ts  useApplicationTracker.ts
